@@ -7,6 +7,7 @@
    warning on pam_conv struct conversation function.
  - (stevesk) [auth-pam.h] license
  - (stevesk) [auth-pam.h] unneeded include
+ - (stevesk) [auth-pam.[ch] ssh.h] move SSHD_PAM_SERVICE to auth-pam.h
 
 20020720
  - (stevesk) [ssh-keygen.c] bug #231: always init/seed_rng().
@@ -1407,4 +1408,4 @@
  - (stevesk) entropy.c: typo in debug message
  - (djm) ssh-keygen -i needs seeded RNG; report from markus@
 
-$Id: ChangeLog,v 1.2385 2002/07/21 23:20:07 stevesk Exp $
+$Id: ChangeLog,v 1.2386 2002/07/21 23:59:40 stevesk Exp $
